# Crime-map

./: LICENSE  README.md
Backend/: BUILD.bazel  README  WORKSPACE  deps.bzl  go.mod  go.sum
Backend/analytics/offline/data_importing/: README.txt  data.tsv  dependency-reduced-pom.xml  pom.xml
Backend/analytics/offline/data_importing/src/main/java/edu/nyu/: HBaseCrimeImporter.java  HBaseCrimeMapper.java
Backend/analytics/offline/data_migration/: README.txt  pom.xml
Backend/analytics/offline/data_migration/src/main/java/edu/nyu/: DataMigration.java  DataMigrationMapper.java  DataMigrationReducer.java
Backend/analytics/online/config/: crimemap.dev.yaml  crimemap.grpc.yaml
Backend/analytics/online/proto/crimemap_service/: BUILD.bazel  crimemap_service.proto
Backend/analytics/online/proto/crimemap_service/crimemap_service/: BUILD.bazel  crimemap_service.pb.go  crimemap_service_grpc.pb.go
Backend/analytics/online/server/cmd/: BUILD.bazel  main.go
Backend/analytics/online/server/crimemap_service/: BUILD.bazel  crimemap_service.go
Backend/analytics/online/server/enviroment/: BUILD.bazel  enviroment.go
Backend/analytics/online/server/grpc_server/: BUILD.bazel  grpc_server.go
Backend/analytics/online/server/grpc_web_server/: BUILD.bazel  grpc_web_server.go
Backend/analytics/online/server/hbase_client/: BUILD.bazel  hbase_client.go
Backend/analytics/online/server/http_server/: BUILD.bazel  http_server.go
Backend/analytics/online/server/interfaces/: BUILD.bazel  interfaces.go
Backend/analytics/online/server/real_enviroment/: BUILD.bazel  real_enviroment.go
Backend/analytics/online/webapp/: BUILD.bazel  index.html
my-map/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
my-map/e2e/src/: app.e2e-spec.ts
my-map/src/: index.html
my-map/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  crime.service.spec.ts  crime.service.ts  grpc.service.ts
my-map/src/app/crime_generated/: crime_grpc_web_pb.js  crime_pb.js
my-map/src/app/loading-spinner/: loading-spinner.component.html
my-map/src/proto/: helloworld.proto  helloworld_grpc_pb.js  helloworld_pb.js  server.js
