load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "crimemap_service",
    srcs = ["crimemap_service.go"],
    importpath = "github.com/jialunzhai/crimemap/analytics/online/server/crimemap_service",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/proto/crimemap_service",
        "//analytics/online/server/enviroment",
    ],
)
