load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "hbase_client",
    srcs = ["hbase_client.go"],
    importpath = "github.com/jialunzhai/crimemap/analytics/online/server/hbase_client",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/server/enviroment",
        "//analytics/online/server/interfaces",
        "//vendor/github.com/tsuna/gohbase",
        "//vendor/github.com/tsuna/gohbase/filter",
        "//vendor/github.com/tsuna/gohbase/hrpc",
        "@com_github_pierrre_geohash//:geohash",
    ],
)
