load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "crimemap_service",
    srcs = [
        "crimemap_service.pb.go",
        "crimemap_service_grpc.pb.go",
    ],
    importpath = "github.com/jialunzhai/crimemap/analytics/online/proto/crimemap_service/crimemap_service",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
